--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "loopback-boot": "2.6.4",
     "loopback-component-passport": "1.1.2",
     "loopback-component-storage": "1.2.0",
-    "loopback-connector-mongodb": "1.11.3",
+    "loopback-connector-mongodb": "^1.11.3",
     "loopback-datasource-juggler": "2.33.1",
     "nodemon": "1.3.7",
     "passport": "0.2.1",
