add protocol and healthcenter model, deactivate the rest

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -58,6 +58,14 @@
     "dataSource": "db",
     "public": true
   },
+  "Protocol": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Healthcenter": {
+    "dataSource": "db",
+    "public": true
+  },
   "Category": {
     "dataSource": "db",
     "public": true
