--- a/bower.json
+++ b/bower.json
@@ -35,8 +35,9 @@
     "Faker": "2.1.2",
     "angular-mocks": "1.3.12",
     "angular-scenario": "1.3.12",
-    "angular-schema-form": "0.8.3",
-    "angular-schema-form-ui-select": "0.1.1"
+    "angular-schema-form": "0.8.8",
+    "angular-schema-form-ui-select": "0.1.1",
+    "underscore": ">= 1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
