--- a/bower.json
+++ b/bower.json
@@ -36,8 +36,8 @@
     "angular-mocks": "1.3.12",
     "angular-scenario": "1.3.12",
     "angular-schema-form": "0.8.8",
-    "angular-schema-form-ui-select": "0.1.1",
-    "underscore": ">= 1.7.0"
+    "angular-schema-form-ui-select": "~0.1.1",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
