--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,31 +38,11 @@
     "dataSource": "db",
     "public": false
   },
-  "Page": {
-    "dataSource": "db",
-    "public": true
-  },
-  "Note": {
-    "dataSource": "db",
-    "public": true
-  },
-  "Post": {
+  "Protocol": {
     "dataSource": "db",
     "public": true
   },
   "Setting": {
-    "dataSource": "db",
-    "public": true
-  },
-  "Product": {
-    "dataSource": "db",
-    "public": true
-  },
-  "Category": {
-    "dataSource": "db",
-    "public": true
-  },
-  "Event": {
     "dataSource": "db",
     "public": true
   },
