--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "angular-mocks": "1.3.12",
     "angular-scenario": "1.3.12",
     "angular-schema-form": "0.8.3",
-    "angular-schema-form-ui-select": "0.1.1"
+    "angular-schema-form-ui-select": "0.1.1",
+    "vis": "~4.8.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
