--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "angular-scenario": "1.3.12",
     "angular-schema-form": "0.8.3",
     "angular-schema-form-ui-select": "0.1.1",
-    "vis": "~4.8.0"
+    "vis": "~4.8.0",
+    "angular-advanced-searchbox": "~1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
