--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "grunt-contrib-cssmin": "0.11.0",
     "grunt-contrib-htmlmin": "0.4.0",
     "grunt-contrib-jshint": "0.11.0",
-    "grunt-contrib-uglify": "0.9.x",
+    "grunt-contrib-uglify": "0.8.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-docular": "0.2.4",
     "grunt-filerev": "2.1.2",
