--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,10 @@
     "angular-schema-form": "0.8.3",
     "angular-schema-form-ui-select": "0.1.1",
     "vis": "~4.8.0",
-    "angular-advanced-searchbox": "~1.1.1"
+    "angular-advanced-searchbox": "~1.1.1",
+    "ngmap": "~1.13.4",
+    "angular-visjs": "~4.0.2",
+    "angular-permission": "~0.3.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
@@ -68,10 +71,12 @@
   },
   "appPath": "client/app/",
   "resolutions": {
-    "angular": "1.3.12",
+    "angular": "~1.3.15",
     "angular-animate": "1.3.12",
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate": "2.6.0",
-    "angular-translate-loader-url": "2.6.0"
+    "angular-translate-loader-url": "2.6.0",
+    "vis": "~4.2.0",
+    "angular-ui-router": "~0.2.11"
   }
 }
