fix protocol social tabs and create visualizations

--- a/common/models/protocol-approval.json
+++ b/common/models/protocol-approval.json
@@ -1,7 +1,7 @@
 {
   "name": "ProtocolApproval",
   "plural": "ProtocolApprovals",
-  "base": "PersistedModel",
+  "base": "AppModel",
   "properties": {
       "approvalDate": {
         "type": "date"
