--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "loopback",
-  "version": "0.0.1",
+  "version": "0.2.3",
   "dependencies": {
     "angular": "1.3.12",
     "bootstrap": "3.3.2",
@@ -12,57 +12,32 @@
     "angular-touch": "1.3.12",
     "angular-ui-router": "0.2.10",
     "font-awesome": "4.3.0",
-    "angular-formly": "1.0.0",
     "angular-toasty": "0.1.8",
     "angular-file-upload": "v1.1.5",
     "angular-filter": "0.5.2",
     "angular-sweetalert": "1.0.3",
     "angular-gravatar": "0.2.2",
     "ionicons": "2.0.0",
-    "angular-bootstrap": "0.12.0",
-    "angular-bootstrap-nav-tree": "*",
-    "angular-ui-codemirror": "bower",
-    "angular-markdown-directive": "0.3.0",
+    "angular-bootstrap": "~0.13.4",
     "angular-elastic": "2.4.2",
-    "angular-autoFields-bootstrap": "2.1.6",
-    "angular-gettext": "2.0.0",
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate": "2.6.0",
     "angular-translate-loader-url": "2.6.0",
-    "angular-ui-grid": "3.0.0-rc.16",
     "flag-icon-css": "0.6.4",
     "angular-loading-bar": "0.6.0",
-    "Faker": "2.1.2",
-    "angular-mocks": "1.3.12",
-    "angular-scenario": "1.3.12",
-    "angular-schema-form": "0.8.4",
-    "angular-schema-form-ui-select": "0.1.1",
     "vis": "~4.8.0",
     "angular-advanced-searchbox": "~1.1.1",
-    "ngmap": "~1.13.4",
     "angular-visjs": "~4.0.2",
-    "angular-permission": "~0.3.1"
+    "angular-permission": "~0.3.1",
+    "angular-formly": "6.24.23",
+    "angular-formly-templates-bootstrap": "6.0.0",
+    "ui-select": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
     "angular-scenario": "1.3"
   },
   "overrides": {
-    "angular-markdown-directive": {
-      "main": [
-        "markdown.js"
-      ]
-    },
-    "codemirror": {
-      "main": [
-        "lib/codemirror.css",
-        "theme/monokai.css",
-        "lib/codemirror.js",
-        "addon/mode/overlay.js",
-        "mode/gfm/gfm.js",
-        "mode/markdown/markdown.js"
-      ]
-    },
     "showdown": {
       "main": [
         "compressed/showdown.js"
@@ -71,12 +46,13 @@
   },
   "appPath": "client/app/",
   "resolutions": {
-    "angular": "~1.3.15",
+    "angular": ">=1.3.0",
     "angular-animate": "1.3.12",
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate": "2.6.0",
     "angular-translate-loader-url": "2.6.0",
     "vis": "~4.2.0",
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "~0.2.11",
+    "angular-bootstrap": "~0.13.4"
   }
 }
