--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate": "2.6.0",
     "angular-translate-loader-url": "2.6.0",
+    "angular-gettext": "2.0.0",
     "flag-icon-css": "0.6.4",
     "angular-loading-bar": "0.6.0",
     "vis": "~4.8.0",
@@ -31,7 +32,10 @@
     "angular-permission": "~0.3.1",
     "angular-formly": "6.24.23",
     "angular-formly-templates-bootstrap": "6.0.0",
-    "ui-select": "*"
+    "angular-ui-select": "~0.12.1",
+    "angular-autoFields-bootstrap": "2.1.6",
+    "angular-schema-form": "0.8.3",
+    "angular-schema-form-ui-select": "0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
@@ -46,13 +50,10 @@
   },
   "appPath": "client/app/",
   "resolutions": {
+    "angular-bootstrap": "~0.13.4",
     "angular": ">=1.3.0",
-    "angular-animate": "1.3.12",
-    "angular-translate-loader-static-files": "2.6.0",
-    "angular-translate": "2.6.0",
-    "angular-translate-loader-url": "2.6.0",
-    "vis": "~4.2.0",
     "angular-ui-router": "~0.2.11",
-    "angular-bootstrap": "~0.13.4"
+    "angular-animate": "1.3.12",
+    "vis": "~4.8.0"
   }
 }
