--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "angular-ui-select": "~0.12.1",
     "angular-autoFields-bootstrap": "2.1.6",
     "angular-schema-form": "0.8.3",
-    "angular-schema-form-ui-select": "0.1.1"
+    "angular-schema-form-ui-select": "0.1.1",
+    "angular-x2js": "~0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3",
