add admin componenet

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-uglify": "0.8.1",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-plato": "^1.2.1",
     "grunt-docular": "0.2.4",
     "grunt-filerev": "2.1.2",
     "grunt-google-cdn": "0.4.3",
@@ -61,6 +60,7 @@
     "grunt-newer": "1.1.0",
     "grunt-ng-annotate": "0.9.2",
     "grunt-ng-constant": "1.0.0",
+    "grunt-plato": "^1.2.1",
     "grunt-svgmin": "2.0.0",
     "grunt-usemin": "3.0.0",
     "grunt-wiredep": "2.0.0",
@@ -71,6 +71,7 @@
     "lodash": "3.10.1",
     "loopback": "2.19.0",
     "loopback-boot": "2.6.4",
+    "loopback-component-admin": "0.0.6",
     "loopback-component-passport": "1.1.2",
     "loopback-component-storage": "1.2.0",
     "loopback-connector-mongodb": "^1.11.3",
